syntax = "proto3";
package nebula.launchpad;

import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/nghuyenthevinh2000/nebula/x/launchpad/types";

message Project {

    // Project owner
    string project_owner = 1 [
        (gogoproto.moretags) = "yaml:\"project_owner\""
    ];

    // Project title
    string project_title = 2 [
        (gogoproto.moretags) = "yaml:\"project_title\""
    ];

    // Project unique id of each project (incremental from 1)
    uint64 project_id = 3 [
        (gogoproto.moretags) = "yaml:\"project_id\""
    ];

    // Project address to store assets
    string project_address = 4 [
        (gogoproto.moretags) = "yaml:\"project_address\""
    ];

    // Project information
    string project_information = 6 [
        (gogoproto.moretags) = "yaml:\"project_information\""
    ];

    // Project status
    uint64 project_status = 7 [
        (gogoproto.moretags) = "yaml:\"project_status\""
    ];

    // Registered Release Mechanism
    repeated google.protobuf.Any registered_rm = 8 [
        (cosmos_proto.accepts_interface) = "ReleaseMechanismI",
        (gogoproto.moretags) = "yaml:\"registered_rm\""
    ];

    // Project verified
    bool project_verified = 9 [
        (gogoproto.moretags) = "yaml:\"project_verified\""
    ];

}   